reworked class scanning